# dualbird

./: .bazelrc  .clang-tidy  .gitignore  BUILD.bazel  MODULE.bazel  README.MD  meson.build
include/: msol.hpp  node.hpp  rsol.hpp  solution.hpp
src/: main.cpp  meson.build  msol.cpp  node.cpp  rsol.cpp
tests/: BUILD.bazel  meson.build
tests/include/: list_utils.hpp
tests/src/: gtest_main.cc  list_utils.cc  msol.t.cc  node.t.cc  rsol.t.cc
